update: NavUser Image and Icon are now with the correct spacing

--- a/src/header.css
+++ b/src/header.css
@@ -56,6 +56,7 @@
 .nav_user{
     display: inline-flex;
     align-items: center;
+    justify-content: space-around;
     padding: 0.25rem 1rem 0.25rem 0.25rem;
     margin-left: 1rem;
     width: 90px;
